done revisi oct 2021

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo"></a>
+                    <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo" width="200px"></a>
 
                 </div><!-- /.navbar-header -->
 
@@ -89,7 +89,7 @@
                 <div class="col-md-6">
                     <h1>Sona Ermando</h1>
                     <div class="page-scroll">
-                        <p class="job-title">I Will Be a Developer</p>
+                        <p class="job-title">Mobile Flutter Developer</p>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
                     </div>
                 </div>
@@ -110,7 +110,11 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm Sona, I am a college from Universitas Negeri Medan, I will be a developer....</p>
+                        <p style="font-size: 1.5em; text-align: center;">Hello, my name is Sona Ermando. I like things
+                            related to
+                            problem-solving, such as
+                            programming, design, and others. And I have some experience in fields that I love, such as
+                            mobile development and web development.</p>
                     </div>
                 </div>
             </div>
@@ -135,7 +139,7 @@
                         <div class="skill">
                             <h4>Flutter</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="20"></div>
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div>
                                 <!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
@@ -152,7 +156,7 @@
                         <div class="skill">
                             <h4>Laravel</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="70"></div>
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="60"></div>
                                 <!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
@@ -160,9 +164,17 @@
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Php</h4>
+                            <h4>React JS</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="70"></div>
+                                <!-- /.progress-bar -->
+                            </div><!-- /.progress -->
+                        </div><!-- /.skill -->
+
+                        <div class="skill">
+                            <h4>Golang</h4>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="50"></div>
                                 <!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
@@ -180,14 +192,14 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="service">
-                            <img src="assets/img/front-end.svg" alt="Front End Developer">
-                            <h4>Front-end</h4>
+                            <img src="assets/img/mobile-coding.png" alt="Front End Developer" />
+                            <h4>Mobile Development</h4>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-6">
                         <div class="service">
-                            <img src="assets/img/back-end.svg" alt="Back End Developer">
-                            <h4>Back-end</h4>
+                            <img src="assets/img/coding.png" alt="Back End Developer">
+                            <h4>Web Development</h4>
                         </div><!-- /.service -->
                     </div>
 
@@ -229,10 +241,10 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portofolio-3.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Medium Low Budget</h4>
+                                <h4>TodoList Web App</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="http://sonrori.demosanbercode.com/"><span
+                                <a href="https://todo-list-sonex.netlify.app/"><span
                                         class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
@@ -241,10 +253,10 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portofolio-4.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Akad</h4>
+                                <h4>Exch Stack Web</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="http://akad.demosanbercode.com/"><span
+                                <a href="https://exch-stack.netlify.app/"><span
                                         class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
@@ -253,11 +265,10 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portofolio-5.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Verbal App</h4>
+                                <h4>Find House App</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="https://cariherbal.vercel.app/"><span
-                                        class="glyphicon glyphicon-link"></span></a>
+                                <a href=""><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -265,11 +276,10 @@
                         <div class="portfolio-item">
                             <img src="assets/img/Portofolio-6.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Peminjaman App</h4>
+                                <h4>Booking Airplane Ticket App</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span
                                         class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="http://snng.demosanbercode.com/"><span
-                                        class="glyphicon glyphicon-link"></span></a>
+                                <a href=""><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -281,7 +291,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="0" data-speed="2000">0</p>
+                        <p class="counter start" data-to="1" data-speed="2000">0</p>
                         <h4>Years Work Experience</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
@@ -301,22 +311,41 @@
 
                 <h3>Contact</h3>
                 <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                <form>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
-                        </div>
-                        <div class="col-sm-6">
-                            <input type="email" name="email" class="form-control" placeholder="Email" required>
-                        </div>
-                        <div class="col-sm-12">
-                            <textarea name="message" id="mesaage" class="form-control" placeholder="Message"
-                                required></textarea>
+
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="contact">
+                            <a href="https://www.facebook.com/profile.php?id=100006563884984">
+                                <img src="assets/img/facebook.png" alt="" height="50px">
+                                <h4>Sona Ermando</h4>
+                            </a>
                         </div>
                     </div>
-                    <button href="#" class="btn btn-border" type="submit">Hire Me <span
-                            class="glyphicon glyphicon-send"></span></button>
-                </form>
+                    <div class="col-12 col-md-6">
+                        <div class="contact">
+                            <a href="https://github.com/sonex23">
+                                <img src="assets/img/github.png" alt="" height="50px">
+                                <h4>Sona Ermando</h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="contact">
+                            <a href="https://www.instagram.com/sona_ermando/">
+                                <img src="assets/img/instagram.png" alt="" height="50px">
+                                <h4>Sona Ermando</h4>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="contact">
+                            <a href="https://www.linkedin.com/in/sona-ermando-8754751a2/">
+                                <img src="assets/img/linkedin.png" alt="" height="50px">
+                                <h4>Sona Ermando</h4>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section><!-- /.section-form -->
 
@@ -326,9 +355,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 col-xs-12">
-                    <a class="icon facebook-bg" href="#"><i class="icon-facebook"></i></a>
+                    <a class="icon facebook-bg" href="https://www.facebook.com/profile.php?id=100006563884984"><i
+                            class="icon-facebook"></i></a>
                     <a class="icon twitter-bg" href="#"><i class="icon-twitter"></i></a>
-                    <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
+                    <a class="icon gplus-bg" href=""><i class="icon-linkedin"></i></a>
                     <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
                 </div>
                 <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3">
@@ -388,11 +418,11 @@
                     <img class="img-res" src="assets/img/Portofolio-3.png" alt="">
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">Medium Low Budget</h4>
-                    <p>This app is look like medium app, you can post a content and the other can see your content.</p>
+                    <h4 class="modal-title">TodoList Web App</h4>
+                    <p>make task, update task, and delete task to do</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="http://sonrori.demosanbercode.com" class="btn btn-fill">Visit Page</a>
+                    <a href="https://todo-list-sonex.netlify.app/" class="btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -406,11 +436,11 @@
                     <img class="img-res" src="assets/img/Portofolio-4.png" alt="">
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">Akad</h4>
-                    <p>This app is a homework from my teacher, i even don't know what kind of this app.</p>
+                    <h4 class="modal-title">Exch Stack Web</h4>
+                    <p>The web to show information about Stock Market arround the world</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="http://akad.demosanbercode.com"" class=" btn btn-fill">Visit Page</a>
+                    <a href="https://exch-stack.netlify.app/" class=" btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -424,11 +454,11 @@
                     <img class="img-res" src="assets/img/Portofolio-5.png" alt="">
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">Verbal App</h4>
-                    <p>This app is for search some verbal app and see the details of them.</p>
+                    <h4 class="modal-title">Find House App</h4>
+                    <p>App for booking House </p>
                 </div>
                 <div class="modal-footer">
-                    <a href="https://cariherbal.vercel.app" class="btn btn-fill">Visit Page</a>
+                    <a href="" class="btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -442,11 +472,11 @@
                     <img class="img-res" src="assets/img/Portofolio-6.png" alt="">
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">Peminjaman App</h4>
-                    <p>This app is for Mengolah Data college who borrow a LCD Proyektor from Prodi.</p>
+                    <h4 class="modal-title">Booking Airplane Ticket App</h4>
+                    <p>App for booking airplane ticket</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="http://snng.demosanbercode.com"" class=" btn btn-fill">Visit Page</a>
+                    <a href="" class=" btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
