--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo" width="200px"></a>
+                    <a href="#hero" class="site-logo"><img src="assets/img/logo.png" alt="logo" height="40px"></a>
 
                 </div><!-- /.navbar-header -->
 
@@ -196,6 +196,7 @@
                             <h4>Mobile Development</h4>
                         </div><!-- /.service -->
                     </div>
+                    <br>
                     <div class="col-sm-6">
                         <div class="service">
                             <img src="assets/img/coding.png" alt="Back End Developer">
