--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <div class="skill">
                             <h4>Javascript</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="60"></div>
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="50"></div>
                                 <!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
@@ -156,7 +156,7 @@
                         <div class="skill">
                             <h4>Laravel</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="60"></div>
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="50"></div>
                                 <!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
@@ -166,7 +166,7 @@
                         <div class="skill">
                             <h4>React JS</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="70"></div>
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="50"></div>
                                 <!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
@@ -217,6 +217,39 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
+                            <img src="assets/img/Portofolio-5.png" class="img-res" alt="">
+                            <div class="portfolio-item-info">
+                                <h4>Cozy App Sona</h4>
+                                <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span
+                                        class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="https://play.google.com/store/apps/details?id=com.sonex23.cozy"><span class="glyphicon glyphicon-link"></span></a>
+                            </div><!-- /.portfolio-item-info -->
+                        </div><!-- /.portfolio-item -->
+                    </div>
+                    <div class="col-md-4 col-xs-6">
+                        <div class="portfolio-item">
+                            <img src="assets/img/Portofolio-6.png" class="img-res" alt="">
+                            <div class="portfolio-item-info">
+                                <h4>Sona Airplane</h4>
+                                <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span
+                                        class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="https://play.google.com/store/apps/details?id=com.sonex23.airplane"><span class="glyphicon glyphicon-link"></span></a>
+                            </div><!-- /.portfolio-item-info -->
+                        </div><!-- /.portfolio-item -->
+                    </div>
+                    <div class="col-md-4 col-xs-6">
+                        <div class="portfolio-item">
+                            <img src="assets/img/Portofolio-7.png" class="img-res" alt="">
+                            <div class="portfolio-item-info">
+                                <h4>Toko Sona</h4>
+                                <a href="#" data-toggle="modal" data-target="#portfolioItem7"><span
+                                        class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="https://play.google.com/store/apps/details?id=com.sonex23.toko_sona"><span class="glyphicon glyphicon-link"></span></a>
+                            </div><!-- /.portfolio-item-info -->
+                        </div><!-- /.portfolio-item -->
+                    </div>
+                    <div class="col-md-4 col-xs-6">
+                        <div class="portfolio-item">
                             <img src="assets/img/Portofolio-1.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Nex - Football</h4>
@@ -262,28 +295,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
-                            <img src="assets/img/Portofolio-5.png" class="img-res" alt="">
-                            <div class="portfolio-item-info">
-                                <h4>Find House App</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span
-                                        class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href=""><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
-                    </div>
-                    <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
-                            <img src="assets/img/Portofolio-6.png" class="img-res" alt="">
-                            <div class="portfolio-item-info">
-                                <h4>Booking Airplane Ticket App</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span
-                                        class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href=""><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
-                    </div>
+                    
                 </div>
             </div>
         </section><!-- /.secton-portfolio -->
@@ -455,11 +467,11 @@
                     <img class="img-res" src="assets/img/Portofolio-5.png" alt="">
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">Find House App</h4>
+                    <h4 class="modal-title">Cozy App Sona</h4>
                     <p>App for booking House </p>
                 </div>
                 <div class="modal-footer">
-                    <a href="" class="btn btn-fill">Visit Page</a>
+                    <a href="https://play.google.com/store/apps/details?id=com.sonex23.cozy" class="btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -473,11 +485,29 @@
                     <img class="img-res" src="assets/img/Portofolio-6.png" alt="">
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">Booking Airplane Ticket App</h4>
+                    <h4 class="modal-title">Sona Airplane</h4>
                     <p>App for booking airplane ticket</p>
                 </div>
                 <div class="modal-footer">
-                    <a href="" class=" btn btn-fill">Visit Page</a>
+                    <a href="https://play.google.com/store/apps/details?id=com.sonex23.airplane" class=" btn btn-fill">Visit Page</a>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <div id="portfolioItem7" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
+                    <img class="img-res" src="assets/img/Portofolio-7.png" alt="">
+                </div>
+                <div class="modal-body">
+                    <h4 class="modal-title">Toko Sona</h4>
+                    <p>E-Commerce app demo, using fakeStoreApi</p>
+                </div>
+                <div class="modal-footer">
+                    <a href="https://play.google.com/store/apps/details?id=com.sonex23.toko_sona" class=" btn btn-fill">Visit Page</a>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
