--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="1" data-speed="2000">0</p>
+                        <p class="counter start" data-to="2" data-speed="2000">0</p>
                         <h4>Years Work Experience</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="10" data-speed="2000">0</p>
+                        <p class="counter start" data-to="10+" data-speed="2000">0</p>
                         <h4>Projects</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
