--- a/index.html
+++ b/index.html
@@ -110,11 +110,8 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p style="font-size: 1.5em; text-align: center;">Hello, my name is Sona Ermando. I like things
-                            related to
-                            problem-solving, such as
-                            programming, design, and others. And I have some experience in fields that I love, such as
-                            mobile development and web development.</p>
+                        <p style="font-size: 1.5em; text-align: center;">Highly skilled Flutter Developer with two years of practical experience in the field of mobile app development. Proficient in the Flutter framework and Dart programming language, I specialize in creating cross-platform applications that deliver exceptional user experiences. My expertise includes designing responsive and visually appealing UIs, implementing state management solutions, integrating third-party APIs, and optimizing app performance. Adept at troubleshooting and problem-solving, I am dedicated to staying current with industry trends and technologies, making me a valuable asset to any team aiming to create innovative and user-centric mobile apps.
+                        </p>
                     </div>
                 </div>
             </div>
